<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:paddingLeft="5dp"
    android:layout_height="match_parent"
    tools:context="com.test.jose.testcase8.activity.MainActivity">


    <TextView
        android:id="@+id/txtTestCase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/testcase"
        android:textColor="@color/tDarkGrey"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/myName"
        android:textColor="@color/tLightGrey"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTestCase" />

    <TextView
        android:id="@+id/txtDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currentDate"
        android:textColor="@color/tLightGrey"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtName" />

    <LinearLayout
        android:id="@+id/lLayoutPurchaseCost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/bglightblue"
        android:padding="15dp"
        app:layout_constraintTop_toBottomOf="@+id/txtDate">

        <TextView
            android:id="@+id/txtPurchaseCost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/purchaseCost"
            android:textColor="@color/tLightGrey"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lLayoutManufacturer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bgDarkGrey"
        app:layout_constraintTop_toBottomOf="@+id/lLayoutPurchaseCost">

        <TextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/bgLightGrey"
            android:gravity="center|left"
            android:text="@string/manufacturer"
            android:textColor="@color/tLightGrey"
            android:textSize="18sp"
            android:textStyle="bold" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/spinnerManufacturer"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/txtCostManufacturer"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/bgLightGrey"
            android:gravity="center|right"
            android:text="@string/costManufacturer"
            android:textColor="@color/tLightGrey"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lLayoutCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bgDarkGrey"
        app:layout_constraintTop_toBottomOf="@+id/lLayoutManufacturer">

        <TextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/bgLightGrey"
            android:gravity="center|left"
            android:text="@string/category"
            android:textColor="@color/tLightGrey"
            android:textSize="18sp"
            android:textStyle="bold" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/spinnerCategory"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/txtCostCategory"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/bgLightGrey"
            android:gravity="center|right"
            android:text="@string/costManufacturer"
            android:textColor="@color/tLightGrey"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lLayoutCountry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bgDarkGrey"
        app:layout_constraintTop_toBottomOf="@+id/lLayoutCategory">

        <TextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/bgLightGrey"
            android:gravity="center|left"
            android:text="@string/country"
            android:textColor="@color/tLightGrey"
            android:textSize="18sp"
            android:textStyle="bold" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/spinnerCountry"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/txtCostCountry"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/bgLightGrey"
            android:gravity="center|right"
            android:text="@string/costCountry"
            android:textColor="@color/tLightGrey"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lLayoutState"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bgDarkGrey"
        app:layout_constraintTop_toBottomOf="@+id/lLayoutCountry">

        <TextView

            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/bgLightGrey"
            android:gravity="center|left"
            android:text="@string/state"
            android:textColor="@color/tLightGrey"
            android:textSize="18sp"
            android:textStyle="bold" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/spinnerState"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/txtCostState"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/bgLightGrey"
            android:gravity="center|right"
            android:text="@string/costState"
            android:textColor="@color/tLightGrey"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lLayoutNOP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/bglightblue"
        android:padding="15dp"
        app:layout_constraintTop_toBottomOf="@+id/lLayoutState">

        <TextView
            android:id="@+id/txtNOP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nop"
            android:textColor="@color/tLightGrey"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lLaouytItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/lLayoutNOP">

        <TextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/bgLightGrey"
            android:gravity="center|left"
            android:text="@string/item"
            android:textColor="@color/tLightGrey"
            android:textSize="18sp"
            android:textStyle="bold" />

        <android.support.v7.widget.AppCompatSpinner
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/bgLightGrey"
            android:gravity="center|right"
            android:text="@string/costItem"
            android:textColor="@color/tLightGrey"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lLayoutMTP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/bglightblue"
        android:padding="15dp"
        app:layout_constraintTop_toBottomOf="@+id/lLaouytItem">

        <TextView
            android:id="@+id/txtMTP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mtp"
            android:textColor="@color/tLightGrey"
            android:textSize="18sp" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
